Ensure items are wrapped as flex row

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -479,7 +479,9 @@ h3 {
   font-weight: 400;
 }
 
-.subform-entry.globals {
+.subform-entry.flex-row {
+  flex-direction: row !important;
+  
   .variable {
     width: 100%;
   }
